# IDIO

./: .env.example  .gitignore  LICENSE  README.md  deployments.testnet.json  package-lock.json
.claude/: launch.json
backend/: .env.example  package.json
circuits/: Nargo.toml
contracts/: Cargo.toml
contracts/asp/: Cargo.toml
contracts/asp/src/: lib.rs
contracts/asp/test_snapshots/test/: allow_and_check.1.json  membership_proof_verifies_and_nullifier_is_single_use.1.json
contracts/auction/: Cargo.toml
contracts/auction/src/: lib.rs
contracts/auction/test_snapshots/test/: beshield_consensus_gates_settlement.1.json  bid_from_non_whitelisted_fails.1.json  bid_with_invalid_eligibility_fails.1.json  bidder_can_replace_own_bid.1.json  cancel_after_bids_is_rejected.1.json  cancel_before_bids_blocks_further_ops.1.json  covenant_gate_requires_membership.1.json  deposit_refund_happy_path.1.json  double_settle_is_rejected.1.json  flow_emits_standard_events.1.json  full_auction_flow.1.json  late_reveal_is_rejected.1.json  pause_blocks_operations.1.json  payment_flow_settles_confidentially.1.json  rate_limit_blocks_rapid_actions.1.json  reveal_with_wrong_amount_fails.1.json  reveal_without_bid_is_rejected.1.json  slash_winner_when_unpaid.1.json  ties_resolved_by_earliest_timestamp.1.json
contracts/src/: asp.rs  auction.rs  lib.rs  token.rs  verifier.rs
contracts/test_snapshots/asp/test/: allow_and_check.1.json
contracts/test_snapshots/auction/test/: full_auction_flow.1.json  reveal_with_wrong_amount_fails.1.json
contracts/test_snapshots/token/test/: confidential_transfer.1.json
contracts/test_snapshots/verifier/test/: commitment_roundtrip.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs  test.rs
contracts/token/test_snapshots/test/: confidential_pedersen_flow.1.json  confidential_transfer.1.json
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs  test.rs
contracts/verifier/test_snapshots/test/: commitment_roundtrip.1.json
docs/: ARCHITECTURE.md  CIRCUITS.md  DEMO.md  DEPLOYMENT.md  FRONTEND_GUIDE.md  FRONTEND_ROADMAP.md  FRONTEND_STYLE_GUIDE.md  ROADMAP.md  SETUP.md
frontend/: index.html  netlify.toml  package-lock.json  (+5 more)
prover/: Cargo.toml
prover/examples/: verify_check.rs
prover/src/: lib.rs  membership.rs
(+77 files in other folders)
