[package]
name = "idio-prover"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Circuitos de elegibilidad/reservas Groth16 (BN254) y prover para IDIO"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-std = "0.5"
ark-serialize = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
