[package]
name = "idio-asp"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
idio-verifier = { path = "../verifier" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
idio-prover = { path = "../../prover" }
ark-bn254 = "0.5"
ark-groth16 = "0.5"
