[package]
name = "idio-verifier"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ark-bn254 = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
ark-relations = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-std = "0.5"
